Modifying grub.cfg to automatically boot image

--- a/grub.cfg
+++ b/grub.cfg
@@ -1,3 +1,6 @@
+set timeout=2  # Set timeout before automatically booting
+set default=0  # Set the default menu option
+
 menuentry "Sandbox OS" {
     multiboot /boot/kernel
 }
