Adding some math functions to c and c++ libs

--- a/src/libs/c++/makefile
+++ b/src/libs/c++/makefile
@@ -1,4 +1,4 @@
-# Makefile for C lib
+# Makefile for C++ lib
 
 SRCDIR = src
 OBJDIR = obj
@@ -7,20 +7,17 @@ BINDIR = ../../../lib
 # directory to search for dependencies
 VPATH = $(SRCDIR) include
 
-INCLUDES = -I$(SRCDIR) -Iinclude -I../c++/include
-
-CC = i686-elf-gcc
-CFLAGS = $(INCLUDES) -std=c11 -ffreestanding -O2 -Wall -Wextra
+INCLUDES = -I$(SRCDIR) -Iinclude -I../c/include
 
 CXX = i686-elf-g++
 CXXFLAGS = $(INCLUDES) -std=c++14 -ffreestanding -O2 -Wall -Wextra -fno-exceptions -fno-rtti
 
-DEPS = ctype.h math.h stddef.h stdint.h stdio.h stdlib.h string.h stringutils.h
+DEPS = cmath
 
-_OBJ = ctype.o math.o stdlib.o stdio.o string.o stringutils.o
+_OBJ = cmath.cpp.o
 OBJ = $(patsubst %,$(OBJDIR)/%,$(_OBJ))
 
-TARGET = $(BINDIR)/libc.a
+TARGET = $(BINDIR)/libc++.a
 
 .PHONY: all
 all: init $(TARGET)
@@ -33,10 +30,7 @@ init:
 $(TARGET): $(OBJ)
 	ar rcs $(TARGET) $(OBJ)
 
-$(OBJDIR)/%.o: %.c $(DEPS)
-	$(CC) $(CFLAGS) -c $< -o $@
-
-$(OBJDIR)/%.o: %.cpp $(DEPS)
+$(OBJDIR)/%.cpp.o: %.cpp $(DEPS)
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 .PHONY: clean
