--- a/src/libs/c/makefile
+++ b/src/libs/c/makefile
@@ -12,6 +12,9 @@ INCLUDES = -I$(SRCDIR) -Iinclude
 CC = i686-elf-gcc
 CFLAGS = $(INCLUDES) -std=c11 -ffreestanding -O2 -Wall -Wextra
 
+CXX = i686-elf-g++
+CXXFLAGS = $(INCLUDES) -std=c++14 -ffreestanding -O2 -Wall -Wextra -fno-exceptions -fno-rtti
+
 DEPS = ctype.h math.h stddef.h stdint.h stdio.h stdlib.h string.h stringutils.h
 
 _OBJ = ctype.o math.o stdlib.o stdio.o string.o stringutils.o
@@ -32,6 +35,9 @@ $(TARGET): $(OBJ)
 
 $(OBJDIR)/%.o: %.c $(DEPS)
 	$(CC) $(CFLAGS) -c $< -o $@
+
+$(OBJDIR)/%.o: %.cpp $(DEPS)
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 .PHONY: clean
 clean:
