Moving x86 kernel code to its own directory

--- a/src/libs/c++/makefile
+++ b/src/libs/c++/makefile
@@ -19,6 +19,9 @@ OBJ = $(patsubst %,$(OBJDIR)/%,$(_OBJ))
 
 TARGET = $(BINDIR)/libc++.a
 
+# don't use default rules
+.SUFFIXES:
+
 .PHONY: all
 all: init $(TARGET)
 
