--- a/src/libs/c/makefile
+++ b/src/libs/c/makefile
@@ -13,7 +13,7 @@ CC = i686-elf-gcc
 CFLAGS = $(INCLUDES) -std=c11 -ffreestanding -Wall -Wextra
 
 CXX = i686-elf-g++
-CXXFLAGS = $(INCLUDES) -std=c++14 -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti
+CXXFLAGS = $(INCLUDES) -std=c++1z -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti
 
 release: CFLAGS += -O2
 release: CXXFLAGS += -O2
