Fixing misspelling in makefile

--- a/src/kernel/arch/x86/32Bit/makefile
+++ b/src/kernel/arch/x86/32Bit/makefile
@@ -83,7 +83,7 @@ iso: release
 run: release
 	qemu-system-i386 -kernel $(TARGET)
 
-.PHONE: debugger
+.PHONY: debugger
 debugger: debug
 	qemu-system-i386 -s -S -kernel $(TARGET) &
 	gdb -x $(TOOLSDIR)/x86.gdb
