Adding c and c++ makefile dependency generation

--- a/src/kernel/arch/x86/32Bit/makefile
+++ b/src/kernel/arch/x86/32Bit/makefile
@@ -1,11 +1,19 @@
 # Makefile for kernel
 
 SRCDIR = .
+DEPDIR = .dep
 OBJDIR = obj
 LIBSRCDIR = ../../../../libs
 LIBDIR = ../../../../../lib
 BINDIR = ../../../../../bin
 TOOLSDIR = ../../../../../tools
+
+# compiler flags for generation dependency makefiles
+# -MT:  the name of the target in the dependency file
+# -MMD: generate dependency files while compiling; also ignore system headers
+# -MP:  add a target for each prerequisite to avoid errors when deleting files
+# -MF:  the name of the dependency file
+DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPDIR)/$<.Td
 
 # directory to search for dependencies
 VPATH = $(SRCDIR)
@@ -13,16 +21,22 @@ VPATH = $(SRCDIR)
 INCLUDES = -I$(SRCDIR) -I$(LIBSRCDIR)/c/include -I$(LIBSRCDIR)/c++/include
 
 CC = i686-elf-gcc
-CFLAGS = $(INCLUDES) -std=c11 -ffreestanding -Wall -Wextra
+CFLAGS = $(INCLUDES) -std=c11 -ffreestanding -Wall -Wextra $(DEPFLAGS)
 
 CXX = i686-elf-g++
-CXXFLAGS = $(INCLUDES) -std=c++1z -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti
+CXXFLAGS = $(INCLUDES) -std=c++1z -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti $(DEPFLAGS)
 
 AS = nasm
 ASFLAGS = -f elf32 -I$(SRCDIR)/
 
 LIBS = -L$(LIBDIR) -lc -lc++ -lgcc
 LDFLAGS = -T $(SRCDIR)/link.ld -ffreestanding -nostdlib $(LIBS)
+
+# After compiling, rename the temporary dependency file to its actual name.
+# This is so compilation failures will not result in a corrupted dependency file.
+# Also, touch the object file to make sure it is not older than the dependency
+# file.
+POSTCOMPILE = @mv -f $(DEPDIR)/$<.Td $(DEPDIR)/$<.d && touch $@
 
 release: CFLAGS += -O2
 release: CXXFLAGS += -O2
@@ -32,28 +46,27 @@ debug: CXXFLAGS += -O0 -g
 debug: ASFLAGS += -g
 debug: CONFIG = debug
 
-DEPS = debug.h gdt.h idt.h irq.h isr.h keyboard.h pageframemgr.h paging.h screen.h shell.h system.h timer.h
+SRC = boot.s \
+	  debug.cpp \
+	  gdt.c \
+	  idt.c \
+	  interrupt.s \
+	  irq.cpp \
+	  isr.cpp \
+	  keyboard.cpp \
+	  main.cpp \
+	  pageframemgr.cpp \
+	  paging.cpp \
+	  paging.s \
+	  screen.cpp \
+	  shell.cpp \
+	  system.c \
+	  system.s \
+	  timer.cpp
 
 CRTBEGIN_OBJ = $(shell $(CXX) $(CXXFLAGS) -print-file-name=crtbegin.o)
 CRTEND_OBJ = $(shell $(CXX) $(CXXFLAGS) -print-file-name=crtend.o)
-_OBJ = boot.s.o \
-	   debug.cpp.o \
-	   gdt.c.o \
-	   idt.c.o \
-	   interrupt.s.o \
-	   irq.cpp.o \
-	   isr.cpp.o \
-	   keyboard.cpp.o \
-	   main.cpp.o \
-	   pageframemgr.cpp.o \
-	   paging.cpp.o \
-	   paging.s.o \
-	   screen.cpp.o \
-	   shell.cpp.o \
-	   system.c.o \
-	   system.s.o \
-	   timer.cpp.o
-OBJ = $(patsubst %,$(OBJDIR)/%,$(_OBJ))
+OBJ = $(patsubst %,$(OBJDIR)/%.o,$(SRC))
 BUILD_OBJ = $(OBJDIR)/crti.s.o $(OBJ) $(OBJDIR)/crtn.s.o
 LINK_OBJ = $(OBJDIR)/crti.s.o $(CRTBEGIN_OBJ) $(OBJ) $(CRTEND_OBJ) $(OBJDIR)/crtn.s.o
 
@@ -67,8 +80,9 @@ debug: init libs $(TARGET)
 
 .PHONY: init
 init:
-	mkdir -p $(OBJDIR)
-	mkdir -p $(BINDIR)
+	@mkdir -p $(DEPDIR)
+	@mkdir -p $(OBJDIR)
+	@mkdir -p $(BINDIR)
 
 .PHONY: libs
 libs:
@@ -91,17 +105,28 @@ debugger: debug
 $(TARGET): $(BUILD_OBJ)
 	$(CXX) $(LINK_OBJ) -o $(TARGET) $(LDFLAGS)
 
-$(OBJDIR)/%.c.o: %.c $(DEPS)
+$(OBJDIR)/%.c.o: %.c $(DEPDIR)/%.c.d
 	$(CC) $(CFLAGS) -c $< -o $@
+	$(POSTCOMPILE)
 
-$(OBJDIR)/%.cpp.o: %.cpp $(DEPS)
+$(OBJDIR)/%.cpp.o: %.cpp $(DEPDIR)/%.cpp.d
 	$(CXX) $(CXXFLAGS) -c $< -o $@
+	$(POSTCOMPILE)
 
 $(OBJDIR)/%.s.o: %.s
 	$(AS) $(ASFLAGS) $< -o $@
+
+# rule for dependency files (this is here to keep make happy)
+$(DEPDIR)/%.d: ;
+
+# prevent make from deleting dependency files
+.PRECIOUS: $(patsubst %,$(DEPDIR)/%.d,$(SRC))
 
 .PHONY: clean
 clean:
 	cd $(LIBSRCDIR)/c++; make clean
 	cd $(LIBSRCDIR)/c; make clean
-	rm -f $(OBJDIR)/*.o $(TARGET)
+	rm -f $(TARGET) $(OBJDIR)/*.o $(DEPDIR)/*.d
+
+# include dependency makefiles
+include $(wildcard $(patsubst %,$(DEPDIR)/%.d,$(SRC)))
