Adding makefile dependency generation for libs

--- a/src/libs/c++/makefile
+++ b/src/libs/c++/makefile
@@ -1,8 +1,16 @@
 # Makefile for C++ lib
 
 SRCDIR = src
+DEPDIR = .dep
 OBJDIR = obj
 BINDIR = ../../../lib
+
+# compiler flags for generating dependency makefiles
+# -MT:  the name of the target in the dependency file
+# -MMD: generate dependency files while compiling; also ignore system headers
+# -MP:  add a target for each prerequisite to avoid errors when deleting files
+# -MF:  the name of the dependency file
+C_DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPDIR)/$(notdir $<).Td
 
 # directory to search for dependencies
 VPATH = $(SRCDIR) include
@@ -10,15 +18,20 @@ VPATH = $(SRCDIR) include
 INCLUDES = -I$(SRCDIR) -Iinclude -I../c/include
 
 CXX = i686-elf-g++
-CXXFLAGS = $(INCLUDES) -std=c++1z -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti
+CXXFLAGS = $(INCLUDES) -std=c++1z -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti $(C_DEPFLAGS)
+
+# After compiling, rename the temporary dependency file to its actual name.
+# This is so compilation failures will not result in a corrupted dependency file.
+# Also, touch the object file to make sure it is not older than the dependency
+# file.
+POSTCOMPILE = @mv -f $(DEPDIR)/$(notdir $<).Td $(DEPDIR)/$(notdir $<).d && touch $@
 
 release: CXXFLAGS += -O2
 debug: CXXFLAGS += -O0 -g
 
-DEPS = cmath
+SRC = cmath.cpp
 
-_OBJ = cmath.cpp.o
-OBJ = $(patsubst %,$(OBJDIR)/%,$(_OBJ))
+OBJ = $(patsubst %,$(OBJDIR)/%.o,$(SRC))
 
 TARGET = $(BINDIR)/libc++.a
 
@@ -33,15 +46,26 @@ debug: init $(TARGET)
 
 .PHONY: init
 init:
-	mkdir -p $(OBJDIR)
-	mkdir -p $(BINDIR)
+	@mkdir -p $(DEPDIR)
+	@mkdir -p $(OBJDIR)
+	@mkdir -p $(BINDIR)
 
 $(TARGET): $(OBJ)
 	ar rcs $(TARGET) $(OBJ)
 
-$(OBJDIR)/%.cpp.o: %.cpp $(DEPS)
+$(OBJDIR)/%.cpp.o: %.cpp $(DEPDIR)/%.cpp.d
 	$(CXX) $(CXXFLAGS) -c $< -o $@
+	$(POSTCOMPILE)
+
+# rule for dependency files (this is here to keep make happy)
+$(DEPDIR)/%.d: ;
+
+# prevent make from deleting dependency files
+.PRECIOUS: $(patsubst %,$(DEPDIR)/%.d,$(SRC))
 
 .PHONY: clean
 clean:
-	rm -f $(OBJDIR)/*.o $(TARGET)
+	rm -f $(TARGET) $(OBJDIR)/*.o $(DEPDIR)/*.d
+
+# include dependency makefiles
+include $(wildcard $(patsubst %,$(DEPDIR)/%.d,$(SRC)))
