--- a/src/libs/c/makefile
+++ b/src/libs/c/makefile
@@ -57,11 +57,11 @@ $(TARGET): $(OBJ)
 	ar rcs $(TARGET) $(OBJ)
 
 $(OBJDIR)/%.c.o: %.c $(DEPDIR)/%.c.d
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) -c $< $(CFLAGS) -o $@
 	$(POSTCOMPILE)
 
 $(OBJDIR)/%.cpp.o: %.cpp $(DEPDIR)/%.cpp.d
-	$(CXX) $(CXXFLAGS) -c $< -o $@
+	$(CXX) -c $< $(CXXFLAGS) -o $@
 	$(POSTCOMPILE)
 
 # rule for dependency files (this is here to keep make happy)
