--- a/grub.cfg
+++ b/grub.cfg
@@ -3,4 +3,7 @@ set default=0  # Set the default menu option
 
 menuentry "Sandbox OS" {
     multiboot /boot/kernel
+
+    module /modules/test1 test1
+    module /modules/test2 test2
 }
