--- a/grub.cfg
+++ b/grub.cfg
@@ -7,4 +7,5 @@ menuentry "Sandbox OS" {
     module /modules/test1 test1
     module /modules/test2 test2
     module /modules/test3 test3
+    module /modules/test4 test4
 }
