Removing old test programs

--- a/grub.cfg
+++ b/grub.cfg
@@ -4,8 +4,5 @@ set default=0  # Set the default menu option
 menuentry "Sandbox OS" {
     multiboot /boot/kernel
 
-    module /modules/test1 test1
-    module /modules/test2 test2
-    module /modules/test3 test3
-    module /modules/test4 test4
+    module /modules/test test
 }
