Adding init program

--- a/grub.cfg
+++ b/grub.cfg
@@ -4,5 +4,6 @@ set default=0  # Set the default menu option
 menuentry "Sandbox OS" {
     multiboot /boot/kernel
 
+    module /modules/init init
     module /modules/test test
 }
