--- a/grub.cfg
+++ b/grub.cfg
@@ -5,5 +5,6 @@ menuentry "Sandbox OS" {
     multiboot /boot/kernel
 
     module /modules/init init
+    module /modules/sh   sh
     module /modules/test test
 }
