--- a/grub.cfg
+++ b/grub.cfg
@@ -4,8 +4,9 @@ set default=0  # Set the default menu option
 menuentry "Sandbox OS" {
     multiboot /boot/kernel
 
-    module /modules/echo echo
-    module /modules/init init
-    module /modules/sh   sh
-    module /modules/test test
+    module /modules/echo      echo
+    module /modules/fork-demo fork-demo
+    module /modules/init      init
+    module /modules/sh        sh
+    module /modules/test      test
 }
