--- a/grub.cfg
+++ b/grub.cfg
@@ -4,9 +4,11 @@ set default=0  # Set the default menu option
 menuentry "Sandbox OS" {
     multiboot /boot/kernel
 
+    module /modules/clear     clear
     module /modules/echo      echo
     module /modules/fork-demo fork-demo
     module /modules/init      init
     module /modules/sh        sh
+    module /modules/term      term
     module /modules/test      test
 }
