Adding 'term' command

--- a/grub.cfg
+++ b/grub.cfg
@@ -8,5 +8,6 @@ menuentry "Sandbox OS" {
     module /modules/fork-demo fork-demo
     module /modules/init      init
     module /modules/sh        sh
+    module /modules/term      term
     module /modules/test      test
 }
