Launching second shell for serial port

--- a/src/kernel/arch/x86/32Bit/makefile
+++ b/src/kernel/arch/x86/32Bit/makefile
@@ -85,7 +85,7 @@ iso:
 
 .PHONY: run
 run: release iso
-	qemu-system-i386 -cdrom $(BINDIR)/SandboxOS-x86.iso
+	qemu-system-i386 -serial stdio -cdrom $(BINDIR)/SandboxOS-x86.iso
 
 .PHONY: debugger
 debugger: debug iso
