Renaming program test to tester

--- a/grub.cfg
+++ b/grub.cfg
@@ -9,5 +9,5 @@ menuentry "Sandbox OS" {
     module /modules/fork-demo fork-demo
     module /modules/init      init
     module /modules/sh        sh
-    module /modules/test      test
+    module /modules/tester    tester
 }
