--- a/grub.cfg
+++ b/grub.cfg
@@ -1,7 +1,7 @@
 set timeout=1  # Set timeout before automatically booting
 set default=0  # Set the default menu option
 
-menuentry "Sandbox OS" {
+menuentry "OS" {
     multiboot /boot/kernel
 
     module /modules/clear     clear
