Adding a Logger class and removing the Screen class

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,6 +19,10 @@
             "args": [
                 "-s",
                 "-S",
+                "-serial",
+                "/dev/null",
+                "-serial",
+                "file:kernel-x86.log",
                 "-cdrom",
                 "bin/OS-x86.iso"
             ],
