--- a/grub.cfg
+++ b/grub.cfg
@@ -4,10 +4,11 @@ set default=0  # Set the default menu option
 menuentry "OS" {
     multiboot /boot/kernel
 
-    module /modules/clear     clear
-    module /modules/echo      echo
-    module /modules/fork-demo fork-demo
-    module /modules/init      init
-    module /modules/sh        sh
-    module /modules/tester    tester
+    module /modules/clear            clear
+    module /modules/echo             echo
+    module /modules/fork-demo        fork-demo
+    module /modules/init             init
+    module /modules/run-kernel-tests run-kernel-tests
+    module /modules/sh               sh
+    module /modules/tester           tester
 }
