Revert "Making test results file a command line option"
This reverts commit af78b67e1cb2397920e377440102d6d63f30914a.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,4 @@ jobs:
     steps:
       - checkout
       - run: make release iso
-      - run:
-          name: Run tests
-          command: |
-            mkdir -p ~/test-results
-            python3 tools/run-tests.py -o ~/test-results/junit.xml
-      - store_test_results:
-          path: ~/test-results
-      - store_artifacts:
-          path: ~/test-results
+      - run: python3 tools/run-tests.py
