Adding a read-only file system for Multiboot modules

--- a/grub.cfg
+++ b/grub.cfg
@@ -4,6 +4,7 @@ set default=0  # Set the default menu option
 menuentry "OS" {
     multiboot /boot/kernel
 
+    module /modules/cat              cat
     module /modules/clear            clear
     module /modules/echo             echo
     module /modules/fork-demo        fork-demo
